force-app/main/default/objects/External_Document__c/External_Document__c.object-meta.xml
<CustomObject>
    <description>This object will be used to store the URL&apos;s for external documents.</description>
    <label>External Files</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Files</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>