force-app/main/default/objects/External_Document__c/fields/I_RS_Contract__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipName>External_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>