force-app/main/default/objects/External_Document__c/fields/I_RS_Research_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research Opportunity</label>
    <referenceTo>Research_Opportunity__c</referenceTo>
    <relationshipName>External_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>