force-app/main/default/objects/External_Document__c/fields/I_RS_URL__c.field-meta.xml
<CustomField>
    <fullName>I_RS_URL__c</fullName>
    <description>URL of the external document</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>